Доделывает все ошибки и таблицу с функциями

--- a/source/njk/_layout.njk
+++ b/source/njk/_layout.njk
@@ -11,8 +11,8 @@
         <img class="logo__image" src="img/logo-pink-white.svg" alt="Логотип Pink.">
       </a>
 
-      <nav class="page-header__nav nav">
-        <button class="nav-button nav__toogle" type="button">
+      <nav class="nav page-header__nav">
+        <button class="nav__button-toogle" type="button">
           <span class="visually-hidden">
             Отвечает за открытие и закрытие меню.
           </span>
@@ -56,7 +56,7 @@
         <img class="logo__image" src="img/logo-pink.svg" alt="Логотип Pink.">
       </a>
 
-      <ul class="page-footer__social-list social-list">
+      <ul class="social-list page-footer__social-list">
         <li class="social-list__item">
           <a class="social-list__link social-list__link--vk" href="#!">
             <span class="visually-hidden">
@@ -82,10 +82,11 @@
         </li>
       </ul>
 
-      <p class="academy-block__desc">
+      <p class="page-footer__desc">
         Разработано
 
-        <a href="https://htmlacademy.ru/" alt="Сайт академии HTML Academy.">
+        <a class="page-footer__link" href="https://htmlacademy.ru/">
+          <img class="page-footer__logo" src="img/logo-html-academy.svg" alt="Сайт академии HTML Academy.">
         </a>
       </p>
     </footer>
