Доделывает ошибки и таблицу функций

--- a/source/njk/pages/index.njk
+++ b/source/njk/pages/index.njk
@@ -124,7 +124,7 @@ n{% extends "_layout.njk" %}
     </h2>
 
     <table class="tariffs__table">
-      <thead class="">
+      <thead>
         <tr class="tariffs__names">
           <th class="visually-hidden">
             Свойства.
