--- a/source/njk/pages/index.njk
+++ b/source/njk/pages/index.njk
@@ -1,4 +1,4 @@
-n{% extends "_layout.njk" %}
+{% extends "_layout.njk" %}
 
 {% set title = 'Главная' %}
 
@@ -8,7 +8,7 @@ n{% extends "_layout.njk" %}
       Pink.
     </h1>
 
-    <img class="promo__img-phone" src="img/hand-phone-bg.jpg" alt="Рука с телефоном.">
+    <img class="promo__img-phone" src="img/hand-phone.jpg" alt="телефон с запущенным приложением pink в руке.">
 
     <a class="promo__button-download" href="https://www.apple.com/ru/app-store/">
       Скачать приложение
@@ -18,7 +18,7 @@ n{% extends "_layout.njk" %}
       <li class="platforms-list__item">
         <a class="platforms-list__link platforms-list__link--apple" href="https://www.apple.com/ru/app-store/">
           <span class="visually-hidden">
-            Логотип Apple.
+            Версия для Apple.
           </span>
         </a>
       </li>
@@ -26,7 +26,7 @@ n{% extends "_layout.njk" %}
       <li class="platforms-list__item">
         <a class="platforms-list__link platforms-list__link--android" href="https://play.google.com">
           <span class="visually-hidden">
-            Логотип Android.
+            Версия для Android.
           </span>
         </a>
       </li>
@@ -34,7 +34,7 @@ n{% extends "_layout.njk" %}
       <li class="platforms-list__item">
         <a class="platforms-list__link platforms-list__link--microsoft" href="https://www.microsoft.com/">
           <span class="visually-hidden">
-            Логотип Microsoft.
+            Версия для Microsoft.
           </span>
         </a>
       </li>
@@ -73,8 +73,9 @@ n{% extends "_layout.njk" %}
         Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект
       </dd>
 
+      {# К этому пункту добавится декорация с телефоном #}
       <dt class="features__item">
-        Заводит новых друзей              {#к этому пункту добавится декорация с телефоном #}
+        Заводит новых друзей
       </dt>
       <dd class="features__description">
         Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите новых
@@ -82,20 +83,28 @@ n{% extends "_layout.njk" %}
     </dl>
   </section>
 
-  <section class="reviews-section">
-    <h2 class="reviews-section__caption">
-      Николай Петров
+  <section class="reviews-section page-main__reviews">
+    <h2 class="visually-hidden">
+      Отзывы.
     </h2>
 
-    <p class="reviews-section__desc">
-      «Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»
-    </p>
+    <ul class="reviews-section__list">
+      <li class="reviews-section__item">
+        <h3 class="reviews-section__caption">
+          Николай Петров
+        </h3>
 
-    <ul class="togglers togglers__reviews-list">
+        <p class="reviews-section__desc">
+          «Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»
+        </p>
+      </li>
+    </ul>
+
+    <ul class="togglers reviews-section__togglers-list">
       <li class="togglers__item">
         <a class="togglers__button togglers__button--current" href="#!">
           <span class="visually-hidden">
-            Вариант подписки.
+            К отзыву 1.
           </span>
         </a>
       </li>
@@ -103,7 +112,7 @@ n{% extends "_layout.njk" %}
       <li class="togglers__item">
         <a class="togglers__button" href="#!">
           <span class="visually-hidden">
-            Вариант подписки.
+            К отзыву 2.
           </span>
         </a>
       </li>
@@ -111,7 +120,7 @@ n{% extends "_layout.njk" %}
       <li class="togglers__item">
         <a class="togglers__button" href="#!">
           <span class="visually-hidden">
-            Вариант подписки.
+            К отзыву 3.
           </span>
         </a>
       </li>
@@ -126,93 +135,103 @@ n{% extends "_layout.njk" %}
     <table class="tariffs__table">
       <thead>
         <tr class="tariffs__names">
-          <th class="visually-hidden">
+          <th class="visually-hidden" scope="col">
             Свойства.
           </th>
 
-          <th class="tariffs__name">
+          <th class="tariffs__name" scope="col">
             База
-              <p class="tariffs__price">
-                1,99 USD
-              </p>
+            <p class="tariffs__price">
+              1,99 USD
+            </p>
           </th>
 
-          <th class="hit tariffs__name">
+          <th class="hit tariffs__name" scope="col">
             Стандарт
-              <span class="hit__content">
-                Хит
-              </span>
-              <p class="tariffs__price">
-                3,99 USD
-              </p>
+            <span class="hit__content">
+              Хит
+            </span>
+            <p class="tariffs__price">
+              3,99 USD
+            </p>
           </th>
 
-          <th class="tariffs__name">
+          <th class="tariffs__name" scope="col">
             Анлим
-              <p class="tariffs__price">
-                9,99 USD
-              </p>
+            <p class="tariffs__price">
+              9,99 USD
+            </p>
           </th>
         </tr>
       </thead>
 
       <tbody>
-        <tr class="tariffs-functions">
-          <th class="tariffs-function">
+        <tr class="tariffs__functions">
+          <th class="tariffs__function" scope="row">
             Розовый фильтр
           </th>
-          <td class="tariffs-function">
-            <p class="tariffs-value tariffs-value--yes">
+          <td class="tariffs__function">
+            <p class="tariffs__value tariffs__value--yes">
+              <span class="visually-hidden">Да.</span>
             </p>
           </td>
 
-          <td class="tariffs-function">
-            <p class="tariffs-value tariffs-value--yes">
+          <td class="tariffs__function">
+            <p class="tariffs__value tariffs__value--no">
+              <span class="visually-hidden">Нет.</span>
             </p>
           </td>
 
-          <td class="tariffs-function">
-            <p class="tariffs-value tariffs-value--yes">
+          <td class="tariffs__function">
+            <p class="tariffs__value tariffs__value--no">
+              <span class="visually-hidden">Нет.</span>
             </p>
           </td>
         </tr>
 
-        <tr class="tariffs-functions">
-          <th class="tariffs-function">
+        <tr class="tariffs__functions">
+          <th class="tariffs__function" scope="row">
             Смайлики
           </th>
-          <td class="tariffs-function">
-            <p class="tariffs-value tariffs-value--no">
+
+          <td class="tariffs__function">
+            <p class="tariffs__value tariffs__value--yes">
+              <span class="visually-hidden">Да.</span>
             </p>
           </td>
 
-          <td class="tariffs-function">
-            <p class="tariffs-value tariffs-value--yes">
+          <td class="tariffs__function">
+            <p class="tariffs__value tariffs__value--yes">
+              <span class="visually-hidden">Да.</span>
             </p>
           </td>
 
-          <td class="tariffs-function">
-            <p class="tariffs-value tariffs-value--yes">
+          <td class="tariffs__function">
+            <p class="tariffs__value tariffs__value--no">
+              <span class="visually-hidden">Нет.</span>
             </p>
           </td>
         </tr>
 
-        <tr class="tariffs-functions">
-          <th class="tariffs-function">
+        <tr class="tariffs__functions">
+          <th class="tariffs__function" scope="row">
             Комментарии
           </th>
-          <td class="tariffs-function">
-            <p class="tariffs-value tariffs-value--no">
+          <td class="tariffs__function">
+            <p class="tariffs__value tariffs__value--yes">
+              <span class="visually-hidden">Есть.</span>
             </p>
           </td>
 
-          <td class="tariffs-function">
-            <p class="tariffs-value tariffs-value--no">
+          <td class="tariffs__function">
+            <p class="tariffs__value tariffs__value--yes">
+              <span class="visually-hidden">Есть.</span>
             </p>
           </td>
 
-          <td class="tariffs-function">
-            <p class="tariffs-value tariffs-value--yes">
+          <td class="tariffs__function">
+            <p class="tariffs__value tariffs__value--yes">
+              <span class="visually-hidden">Есть.</span>
             </p>
           </td>
         </tr>
@@ -223,7 +242,7 @@ n{% extends "_layout.njk" %}
       <li class="togglers__item">
         <a class="togglers__button" href="#!">
           <span class="visually-hidden">
-            Вариант подписки.
+            К тарифу «База».
           </span>
         </a>
       </li>
@@ -231,7 +250,7 @@ n{% extends "_layout.njk" %}
       <li class="togglers__item">
         <a class="togglers__button togglers__button--current" href="#!">
           <span class="visually-hidden">
-            Вариант подписки.
+            К тарифу «Стандарт».
           </span>
         </a>
       </li>
@@ -239,7 +258,7 @@ n{% extends "_layout.njk" %}
       <li class="togglers__item">
         <a class="togglers__button" href="#!">
           <span class="visually-hidden">
-            Вариант подписки.
+            К тарифу «Анлим».
           </span>
         </a>
       </li>
